--- a/time-left/index.html
+++ b/time-left/index.html
@@ -35,7 +35,7 @@
         
         // Update the text label with the countdown
         const countdownLabel = document.getElementById("countdown-label");
-        countdownLabel.textContent = `${weekdays} days, ${hours} hours, ${minutes} minutes, and ${seconds} seconds until June 16th, 2023 (excluding weekends and Memorial Day)`;
+        countdownLabel.textContent = `${weekdays} days, ${hours} hours, ${minutes} minutes, and ${seconds} seconds until June 16th, 2023 (excluding weekends and Memorial Day)!`;
       }
       
       // Update the countdown every second
