--- a/index.html
+++ b/index.html
@@ -5,43 +5,71 @@
 
  
     <style>
-      body {
-        background: #3c3e48;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-      }
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #3c3e48;
+}
 
-      .countdown-label {
-        color: white;
-        font-family: monospace;
-        font-size: 20px;
-        font-weight: bold;
-        line-height: 1.3;
-        text-align: center;
-      }
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  animation-name: fadeIn;
+  animation-duration: 2s;
+}
 
+.top-text {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  text-align: center;
+}
 
-      .top-text {
-        color: white;
-        font-family: monospace;
-        font-size: 30px;
-        font-weight: bold;
-        margin: 20px 0;
-        text-align: center;
-      }
-      
-      a {
-        color: white;
-        font-family: monospace;
-        font-size: 30px;
-        font-weight: bold;
-        margin: 20px 0;
-        text-align: center;
-      }
+.link {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  border: 2px solid white;
+  padding: 10px 20px;
+  border-radius: 50px;
+  transition: all 0.3s ease;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.link:hover {
+  background-color: white;
+  color: #3c3e48;
+  animation-name: moveUp;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes moveUp {
+  from {
+    top: 0;
+  }
+  to {
+    top: -10px;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
     </style>
   </head>
   <body>
