--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@ body {
   <body>
     <label class="top-text">MCX League Beta</label>
     <a href="https://beta.mcxleague.cf/time-left">Time Left</a>
+     <a href="https://beta.mcxleague.cf/new-website">New Website</a>
   </body>
 </html>
